[package]
name = "cardano-proto"
version = "0.1.0"
edition = "2021"
authors = ["Dan White <blockchain@bluetufa.com>"]

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"
error-chain = "0.12.4"
reqwest = { version = "0.11.22" , features = ["json"]}
tokio = { version = "1.0.0", features = ["full"] }
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }
blockfrost = "0.2.1"
futures = "0.3.29"
